--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "./node_modules/.bin/babel src --out-dir lib",
-    "start": "nodemon --exec babel-node src/index.js",
+    "start": "nodemon --watch src --exec \"npm run build && babel-node lib/index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
