--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dep-resolve",
   "version": "1.0.0",
   "description": "",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "scripts": {
     "build": "./node_modules/.bin/babel src --out-dir lib",
     "test": "jest"
