--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,3 @@
-# package directories
 node_modules
-jspm_packages
-
-# Serverless directories
-.serverless
-
-#local files
-.local
-
-*.log
+lib/**/*.test.js
 package-lock.json
