Included project homepage

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.3.2",
   "description": "resolves a map of dependencies",
   "main": "src/index.js",
+  "homepage": "https://github.com/C5H8NNaO4/node-resolve-dependency-graph/blob/master/README.md",
   "scripts": {
     "build": "./node_modules/.bin/babel src --out-dir lib",
     "version": "npm run build",
