--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.3.3",
   "description": "resolves a map of dependencies",
   "main": "src/index.js",
-  "homepage": "https://github.com/C5H8NNaO4/node-resolve-dependency-graph/blob/master/README.md",
+  "homepage": "https://github.com/C5H8NNaO4/node-resolve-dependency-graph",
   "scripts": {
     "build": "./node_modules/.bin/babel src --out-dir lib",
     "version": "npm run build",
