--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "node-resolve-dependency-graph",
-  "version": "1.3.5",
+  "version": "1.3.6",
   "description": "resolves a map of dependencies",
   "main": "src/index.js",
   "homepage": "https://github.com/C5H8NNaO4/node-resolve-dependency-graph",
-  "keywords": ["dependency", "resolution", "resolve", "dependencies" ],
+  "keywords": [
+    "dependency",
+    "resolution",
+    "resolve",
+    "dependencies"
+  ],
   "scripts": {
     "build": "./node_modules/.bin/babel src --out-dir lib",
     "version": "npm run build",
