--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "build": "./node_modules/.bin/babel src --out-dir lib",
-    "version": "npm run build",
+    "preversion": "npm run build",
     "test": "jest --verbose"
   },
   "author": {
